--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 
 }
 #display{
-    width: 100%;
+    width: 80%;
     padding: 20px;
     font-size: 5rem;
     text-align: left;
@@ -60,6 +60,11 @@ button:active{
 
 .operator:active{
     background-color: hsl(35, 100%, 75%);
+}
+a{
+    margin-left: 200px;
+    border: 3px solid chocolate;
+    color: white;
 }
 
 
